added 1 html line

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <p>This is the index page for Baraka 2025 Altschool Cloud Engineering 2nd Semester Exam.</p>
     <p>Built by Michael Rukevwe Omonedo with ID of ALT/SOE/025/1166</p>
     <p>I'm testing this webpage from my 2 separate EC2 instances.</p>
+<p>This page is served by instance: <strong>{{ inventory_hostname }} </strong></p>
 </body>
 </html>
+
